Sun Sep 11 22:18:07 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* bin/erb (ERB::Main#run): set ERB#filename so that it is used
	  when reporting syntax/runtime errors. Tabs converted to spaces.

Sat Sep 10 22:34:19 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c: protoize.

Sat Sep 10 00:23:01 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (splat_value): simpler and consistent array conversion
	  for argument splat.  [yarv-dev:599]

Fri Sep  9 16:45:25 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_times): make empty strings to keep taintness,
	  and a little improvement.  [ruby-dev:26900]

	* ext/iconv/iconv.c (iconv_try), ext/iconv/extconf.rb: get rid of meta
	  characters in command line option.  fixed: [ruby-talk:155369]

	* ext/iconv/iconv.c: protoized.

Thu Sep  8 14:58:11 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* merged a patch from Takahiro Kambe <taca@back-street.net> to
	  support DragonFly BSD.  [ruby-dev:26984]

Thu Sep  8 13:14:57 2005  Tadashi Saito  <shiba@mail2.accsnet.ne.jp>

	* missing/strchr.c (strrchr): fixed a bug in detecting NUL in a
	  string.  [ruby-dev:26985]

Wed Sep  7 17:29:27 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_engine.c (ossl_engine_s_by_id):
	  OpenSSL::Engine.by_id calls given block before calling
	  ENGINE_init (block parameter is the return value of this method
	  itself).  this functionality is useful to load dynamic shared
	  engines.

		require "openssl"
		pkcs11 = OpenSSL::Engine.by_id("dynamic"){|e|
		  e.ctrl_cmd("SO_PATH", "/usr/lib/opensc/engine_pkcs11.so")
		  e.ctrl_cmd("LIST_ADD", "1")
		  e.ctrl_cmd("LOAD")
		}
		pkcs11.ctrl_cmd("PIN", "secret")
		key = pkcs11.load_private_key

	* ext/openssl/ossl_engine.c (ossl_engine_ctrl_cmd): new method
	  OpenSSL::Engine#ctrl_cmd. it wraps ENGINE_ctrl_cmd_string.

	* ext/openssl/ossl_engine.c (ossl_engine_get_cmds): new method
	  OpenSSL::Engine#cmds. it returms engine command definitions.
